sample/asm/errors/halt_as_last_instruction.asm
.function: main
    izero 0
    halt
.end
